Add plank and breadcrumbs to the styleguide
Also:
* Make reverse-link into a mixin.
* Refactor writeCategoryTree and writeCategoryItem methods.

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -2666,7 +2666,7 @@ input[type="checkbox"].disabled {
 }
 
 .row, .footer, .form-group, .label-selector, .media-addon,
-.media-callout {
+.media-callout, .plank-container-grid {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2676,7 +2676,7 @@ input[type="checkbox"].disabled {
   margin-right: -1.125rem;
 }
 
-.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, .form-group > .label-wrap-wide, .Homepage .label-selector-item, .label-selector-item, .media-callout .media-left, .modal .media-callout .media-left, .col-xs-13, .col-xs-14, .col-xs-15, .col-xs-16, .col-xs-17, .col-xs-18, .col-xs-19, .col-xs-20, .col-xs-21, .col-xs-22, .col-xs-23, .col-xs-24, .form-group > .input-wrap, .form-group > .color-picker, .form-group > .label-wrap, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-13, .col-sm-14, .col-sm-15, .col-sm-16, .col-sm-17, .col-sm-18, .col-sm-19, .col-sm-20, .col-sm-21, .col-sm-22, .col-sm-23, .col-sm-24, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md-13, .col-md-14, .col-md-15, .col-md-16, .col-md-17, .col-md-18, .col-md-19, .col-md-20, .col-md-21, .col-md-22, .col-md-23, .col-md-24, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-13, .col-lg-14, .col-lg-15, .col-lg-16, .col-lg-17, .col-lg-18, .col-lg-19, .col-lg-20, .col-lg-21, .col-lg-22, .col-lg-23, .col-lg-24, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-13, .col-xl-14, .col-xl-15, .col-xl-16, .col-xl-17, .col-xl-18, .col-xl-19, .col-xl-20, .col-xl-21, .col-xl-22, .col-xl-23, .col-xl-24 {
+.col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12, .form-group > .label-wrap-wide, .Homepage .label-selector-item, .label-selector-item, .media-callout .media-left, .modal .media-callout .media-left, .plank-container-grid .plank-wrapper, .col-xs-13, .col-xs-14, .col-xs-15, .col-xs-16, .col-xs-17, .col-xs-18, .col-xs-19, .col-xs-20, .col-xs-21, .col-xs-22, .col-xs-23, .col-xs-24, .form-group > .input-wrap, .form-group > .color-picker, .form-group > .label-wrap, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-13, .col-sm-14, .col-sm-15, .col-sm-16, .col-sm-17, .col-sm-18, .col-sm-19, .col-sm-20, .col-sm-21, .col-sm-22, .col-sm-23, .col-sm-24, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md-13, .col-md-14, .col-md-15, .col-md-16, .col-md-17, .col-md-18, .col-md-19, .col-md-20, .col-md-21, .col-md-22, .col-md-23, .col-md-24, .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-13, .col-lg-14, .col-lg-15, .col-lg-16, .col-lg-17, .col-lg-18, .col-lg-19, .col-lg-20, .col-lg-21, .col-lg-22, .col-lg-23, .col-lg-24, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-13, .col-xl-14, .col-xl-15, .col-xl-16, .col-xl-17, .col-xl-18, .col-xl-19, .col-xl-20, .col-xl-21, .col-xl-22, .col-xl-23, .col-xl-24 {
   position: relative;
   min-height: 1px;
   padding-left: 1.125rem;
@@ -2749,7 +2749,7 @@ input[type="checkbox"].disabled {
           flex: 0 0 45.8333333333%;
 }
 
-.col-xs-12, .form-group > .label-wrap-wide, .Homepage .label-selector-item, .label-selector-item, .media-callout .media-left, .modal .media-callout .media-left {
+.col-xs-12, .form-group > .label-wrap-wide, .Homepage .label-selector-item, .label-selector-item, .media-callout .media-left, .modal .media-callout .media-left, .plank-container-grid .plank-wrapper {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
@@ -3163,7 +3163,7 @@ input[type="checkbox"].disabled {
         -ms-flex: 0 0 29.1666666667%;
             flex: 0 0 29.1666666667%;
   }
-  .col-sm-8, .Homepage .label-selector-item, .label-selector-item, .media-callout .media-left {
+  .col-sm-8, .Homepage .label-selector-item, .label-selector-item, .media-callout .media-left, .plank-container-grid .plank-wrapper {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 33.3333333333%;
             flex: 0 0 33.3333333333%;
@@ -3879,7 +3879,7 @@ input[type="checkbox"].disabled {
         -ms-flex: 0 0 45.8333333333%;
             flex: 0 0 45.8333333333%;
   }
-  .col-lg-12, .Homepage .label-selector-item {
+  .col-lg-12, .Homepage .label-selector-item, .plank-container-grid .plank-wrapper {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
             flex: 0 0 50%;
@@ -4207,7 +4207,7 @@ input[type="checkbox"].disabled {
         -ms-flex: 0 0 29.1666666667%;
             flex: 0 0 29.1666666667%;
   }
-  .col-xl-8, .Homepage .label-selector-item {
+  .col-xl-8, .Homepage .label-selector-item, .plank-container-grid .plank-wrapper {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 33.3333333333%;
             flex: 0 0 33.3333333333%;
@@ -5206,29 +5206,29 @@ output {
 }
 
 .bigcrumbs {
-  border-bottom: solid 1px #e7e8e9;
-  fill: #555a62;
-  padding-left: 6px;
+  display: block;
+  margin-left: -1.125rem;
+  margin-right: -1.125rem;
+  padding-left: 1.125rem;
+  padding-right: 1.125rem;
+  border-bottom: 0.0625rem solid #e7e8e9;
 }
 
 .bigcrumbs .crumb {
-  display: inline-block;
-  line-height: 24px;
-  padding: 6px 24px 6px 12px;
   position: relative;
-  fill: #555a62;
+  display: inline-block;
+  padding: 6px 24px 6px 12px;
+  line-height: 24px;
   color: #555a62;
 }
 
 .bigcrumbs .crumb:hover {
-  fill: #0291db;
   color: #0291db;
 }
 
 .bigcrumbs .crumb:before, .bigcrumbs .crumb:after {
-  content: '';
-  display: block;
   position: absolute;
+  display: block;
   top: -1px;
   bottom: -1px;
   right: -12px;
@@ -5237,25 +5237,17 @@ output {
   border-top-width: 19px;
   border-bottom-width: 19px;
   border-left-color: #e7e8e9;
+  content: '';
 }
 
 .bigcrumbs .crumb:after {
-  content: '';
-  border-left-color: #fff;
   right: -11px;
-}
-
-.bigcrumbs .crumb:before {
+  border-left-color: #fff;
   content: '';
 }
 
 .bigcrumbs .crumb:last-child:before, .bigcrumbs .crumb:last-child:after {
   display: none;
-}
-
-.bigcrumbs .icon-root {
-  padding: 0 8px;
-  margin-bottom: 4px;
 }
 
 input[type="submit"],
@@ -7082,9 +7074,16 @@ select + select {
   font-weight: 500;
 }
 
+.label-selector .title a {
+  color: #555a62;
+}
+
+.label-selector .title a:hover {
+  color: #0291db;
+}
+
 .label-selector .title a:hover {
   text-decoration: none;
-  color: #0291db;
 }
 
 .label-selector .image-wrap {
@@ -8811,7 +8810,7 @@ button.close {
   background-color: #fff;
 }
 
-.plank-item {
+.plank {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -8825,7 +8824,7 @@ button.close {
   border-radius: 2px;
 }
 
-.plank-item svg {
+.plank svg {
   height: 1rem;
 }
 
@@ -8851,6 +8850,15 @@ button.close {
 
 .plank-icon:hover {
   fill: rgba(85, 90, 98, 0.6);
+}
+
+.plank-container-grid {
+  padding: 1.125rem 0.9375rem;
+}
+
+.plank-container-grid .plank-wrapper {
+  padding-left: 0.1875rem;
+  padding-right: 0.1875rem;
 }
 
 .main-row pre.prettyprint {
@@ -9883,11 +9891,11 @@ pre {
   padding: 0 .25rem;
 }
 
-.reverse-link, .label-selector .title a, .FeedItem h2 a, .FeedItem .analytics-widget-header .title a, .analytics-widget-header .FeedItem .title a {
+.reverse-link {
   color: #555a62;
 }
 
-.reverse-link:hover, .label-selector .title a:hover, .FeedItem h2 a:hover, .FeedItem .analytics-widget-header .title a:hover, .analytics-widget-header .FeedItem .title a:hover {
+.reverse-link:hover {
   color: #0291db;
 }
 
@@ -10145,6 +10153,14 @@ strong,
   text-overflow: ellipsis;
   margin-bottom: 0.125rem;
   line-height: 1.3333333333;
+}
+
+.FeedItem h2 a, .FeedItem .analytics-widget-header .title a, .analytics-widget-header .FeedItem .title a {
+  color: #555a62;
+}
+
+.FeedItem h2 a:hover, .FeedItem .analytics-widget-header .title a:hover, .analytics-widget-header .FeedItem .title a:hover {
+  color: #0291db;
 }
 
 .FeedItem .FeedDescription {
