--- a/applications/dashboard/scss/extensions/_feed.scss
+++ b/applications/dashboard/scss/extensions/_feed.scss
@@ -33,7 +33,7 @@
     line-height: $line-height-lg;
 
     a {
-      @extend .reverse-link;
+      @include reverse-link();
     }
   }
 
@@ -50,7 +50,7 @@
       margin-bottom: 0;
       display: inline-block;
     }
-    
+
     img {
       display: none;
     }
