--- a/applications/dashboard/scss/src/_nestable.scss
+++ b/applications/dashboard/scss/src/_nestable.scss
@@ -1,37 +1,45 @@
 // Nestable
 //
-// The markup for the nestable component is very particular. If you try getting creative with the structure, you may
-// run into some functional issues.
+// This works with our implementation of Nestable.js to allow sorting and nesting of items in a list.
+// You can currently see this on the category settings page in the dashboard. The markup for the nestable
+// component is very particular. If you try getting creative with the structure, you may run into some
+// functional issues with the Nestable.js javascript. The nestable handle is the area of the nestable item
+// that is able to be dragged-and-dropped when clicked. The example below shows the nested handle as a
+// sibling to the content. You could also wrap the content in the handle div to make the entire content a
+// clickable drag-and-drop target.
+//
+// The CSS implementation below works with the plank component. You may need to adapt the handle size to work with
+// any other list.
 //
 // Markup:
 // <div class="js-nestable nestable-container">
 //   <ol class="js-nestable-list nestable-list">
 //     <li class="js-nestable-item nestable-item">
-//       <div class="js-nestable-handle nestable-handle">
+//       <div class="js-nestable-handle nestable-handle"></div>
 //       <div class="nestable-content">
 //         Item 1
 //       </div>
 //     </li>
 //     <li class="js-nestable-item nestable-item">
-//       <div class="js-nestable-handle nestable-handle">
+//       <div class="js-nestable-handle nestable-handle"></div>
 //       <div class="nestable-content">
 //         Item 2
 //       </div>
 //       <ol class="js-nestable-list nestable-list">
 //         <li class="js-nestable-item nestable-item">
-//           <div class="js-nestable-handle nestable-handle">
+//           <div class="js-nestable-handle nestable-handle"></div>
 //           <div class="nestable-content">
 //             Item 2.1
 //           </div>
 //         </li>
 //         <li class="js-nestable-item nestable-item">
-//           <div class="js-nestable-handle nestable-handle">
+//           <div class="js-nestable-handle nestable-handle"></div>
 //           <div class="nestable-content">
 //             Item 2.2
 //           </div>
 //         </li>
 //         <li class="js-nestable-item nestable-item">
-//           <div class="js-nestable-handle nestable-handle">
+//           <div class="js-nestable-handle nestable-handle"></div>
 //           <div class="nestable-content">
 //             Item 2.3
 //           </div>
