--- a/applications/dashboard/scss/src/_type.scss
+++ b/applications/dashboard/scss/src/_type.scss
@@ -341,6 +341,21 @@ pre {
 //
 // Styleguide 1.9.
 
+// Badge outlines
+//
+// .badge-danger - Danger color.
+// .badge-warning - Warning color.
+// .badge-info - Info color.
+// .badge-success - Success color.
+//
+// Markup:
+// <button class="btn btn-secondary">
+//   Tags
+//   <span class="badge badge-outline {{modifier_class}}">42</span>
+// </button>
+//
+// Styleguide 1.9.1.
+
 .badge {
   display: inline-block;
   vertical-align: middle;
@@ -354,12 +369,23 @@ pre {
   .btn-group & {
     margin-top: - to-rem(2);
   }
+
+  &.badge-outline {
+    background-color: transparent;
+    color: rgba(0,0,0,.3275);
+    border: $border-width solid rgba(0,0,0,.25);
+  }
 }
 
 @each $semantic-color in map-keys($semantic-colors) {
   $color: map-get($semantic-colors, $semantic-color);
   .badge-#{$semantic-color} {
     background-color: $color;
+
+    &.badge-outline {
+      color: $color;
+      border-color: $color;
+    }
   }
 }
 
