--- a/applications/dashboard/scss/legacy/_style.scss
+++ b/applications/dashboard/scss/legacy/_style.scss
@@ -2575,6 +2575,7 @@ form.Thumbnail .Warning {
   width: 100%;
   height: 100%;
   z-index: 998;
+  background-color: rgba($black, .2);
 }
 
 .MSIE .Overlay {
