Allow bbcode_{ALIGN} classes and add them to our style.css

--- a/applications/dashboard/scss/legacy/_style.scss
+++ b/applications/dashboard/scss/legacy/_style.scss
@@ -5436,19 +5436,19 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
  * Text formatting alignment
  */
 
-.AlignLeft {
+.AlignLeft, .bbcode_left {
   float: left;
   margin: 0 10px 10px 0;
   text-align: left;
 }
 
-.AlignCenter {
+.AlignCenter, .bbcode_center {
   margin: 0 auto;
   display: block;
   text-align: center;
 }
 
-.AlignRight {
+.AlignRight, .bbcode_right {
   float: right;
   margin: 0 0 10px 10px;
   text-align: right;
