--- a/applications/dashboard/styleguide/public/admin.css
+++ b/applications/dashboard/styleguide/public/admin.css
@@ -7462,30 +7462,31 @@ select + select {
   vertical-align: middle;
 }
 
-.iradio:hover, .iradio:focus,
+.iradio:hover, .iradio.hover,
 .icheck-label:hover .iradio,
-.icheck-label:focus .iradio,
 .icheckbox:hover,
-.icheckbox:focus,
+.icheckbox.hover,
 .icheck-label:hover
-.icheckbox,
-.icheck-label:focus
 .icheckbox {
   background-color: #0291db;
   border-color: #0291db;
 }
 
-.iradio:hover::before, .iradio:focus::before,
+.iradio:hover::before, .iradio.hover::before,
 .icheck-label:hover .iradio::before,
-.icheck-label:focus .iradio::before,
 .icheckbox:hover::before,
-.icheckbox:focus::before,
+.icheckbox.hover::before,
 .icheck-label:hover
-.icheckbox::before,
-.icheck-label:focus
 .icheckbox::before {
   display: block;
   color: #fff;
+}
+
+.icheck-label:focus .iradio, .iradio:focus, .iradio.focus, .icheck-label:focus
+.icheckbox,
+.icheckbox:focus,
+.icheckbox.focus {
+  box-shadow: 0px 0px 4px 1px #0291db;
 }
 
 .iradio {
@@ -7546,18 +7547,21 @@ label[id^=iCheck] {
   margin-right: 0;
 }
 
-.checkbox-painted-wrapper label:hover, .checkbox-painted-wrapper label:focus,
-.radio-painted-wrapper label:hover,
-.radio-painted-wrapper label:focus {
+.checkbox-painted-wrapper label:hover,
+.radio-painted-wrapper label:hover {
   background-color: #0291db;
   border-color: #0291db;
 }
 
-.checkbox-painted-wrapper label:hover::before, .checkbox-painted-wrapper label:focus::before,
-.radio-painted-wrapper label:hover::before,
-.radio-painted-wrapper label:focus::before {
+.checkbox-painted-wrapper label:hover::before,
+.radio-painted-wrapper label:hover::before {
   display: block;
   color: #fff;
+}
+
+.checkbox-painted-wrapper input:focus + label,
+.radio-painted-wrapper input:focus + label {
+  box-shadow: 0px 0px 4px 1px #0291db;
 }
 
 .checkbox-painted-wrapper input[type="radio"],
@@ -7590,6 +7594,27 @@ label[id^=iCheck] {
   border: 0.25rem solid #0291db;
   border-radius: 0.5625rem;
   background-color: #fff;
+}
+
+.spoiler-trigger {
+  width: 100%;
+}
+
+.spoiler-content {
+  display: none;
+}
+
+.spoiler {
+  position: relative;
+  min-height: 2.2rem;
+}
+
+.spoiler.spoiler-visible .spoiler-trigger {
+  display: none !important;
+}
+
+.spoiler.spoiler-visible .spoiler-content {
+  display: block;
 }
 
 .hero {
