--- a/applications/dashboard/scss/src/_media.scss
+++ b/applications/dashboard/scss/src/_media.scss
@@ -147,6 +147,17 @@
 }
 
 //
+// Documentation Icon
+//
+
+.documentationLink {
+  display: inline-block;
+  position: relative;
+  vertical-align: 1px;
+  margin-left: 1px;
+}
+
+//
 // Alignment
 //
 
