--- a/applications/dashboard/scss/src/_variables.scss
+++ b/applications/dashboard/scss/src/_variables.scss
@@ -88,6 +88,8 @@ $line-height:                1.5;
 
 $headings-font-weight:       400;
 
+$font-weight-helvetica-medium: 500;
+
 $header-block-height:        to-rem(60);
 
 // Spacing
